WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268739
[GTK] [2.42.5] LowLevelInterpreter.cpp:339:21: error: ‘t6’ was not declared in this scope
https://bugs.webkit.org/show_bug.cgi?id=268739
Summary
[GTK] [2.42.5] LowLevelInterpreter.cpp:339:21: error: ‘t6’ was not declared i...
Alberto Garcia
Reported
2024-02-05 05:25:30 PST
WebKitGTK 2.42.5 fails to build in i386 (works fine in x86_64): In file included from /tmp/webkit2gtk-2.42.5/build-soup2/WTF/Headers/wtf/Platform.h:31, from /tmp/webkit2gtk-2.42.5/build-soup2/WTF/Headers/wtf/ExportMacros.h:32, from /tmp/webkit2gtk-2.42.5/Source/JavaScriptCore/runtime/JSExportMacros.h:32, from /tmp/webkit2gtk-2.42.5/Source/JavaScriptCore/config.h:34, from /tmp/webkit2gtk-2.42.5/Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:26: /tmp/webkit2gtk-2.42.5/Source/JavaScriptCore/llint/LowLevelInterpreter.cpp: In static member function ‘static JSC::JSValue JSC::LLInt::CLoop::execute(JSC::OpcodeID, void*, JSC::VM*, JSC::ProtoCallFrame*, bool)’: /tmp/webkit2gtk-2.42.5/Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:339:21: error: ‘t6’ was not declared in this scope; did you mean ‘tm’? 339 | UNUSED_VARIABLE(t6); | ^~ /tmp/webkit2gtk-2.42.5/build-soup2/WTF/Headers/wtf/Compiler.h:413:38: note: in definition of macro ‘UNUSED_PARAM’ 413 | #define UNUSED_PARAM(variable) (void)variable | ^~~~~~~~ /tmp/webkit2gtk-2.42.5/Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:339:5: note: in expansion of macro ‘UNUSED_VARIABLE’ 339 | UNUSED_VARIABLE(t6); | ^~~~~~~~~~~~~~~ /tmp/webkit2gtk-2.42.5/Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:340:21: error: ‘t7’ was not declared in this scope; did you mean ‘tm’? 340 | UNUSED_VARIABLE(t7); | ^~ /tmp/webkit2gtk-2.42.5/build-soup2/WTF/Headers/wtf/Compiler.h:413:38: note: in definition of macro ‘UNUSED_PARAM’ 413 | #define UNUSED_PARAM(variable) (void)variable | ^~~~~~~~ /tmp/webkit2gtk-2.42.5/Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:340:5: note: in expansion of macro ‘UNUSED_VARIABLE’ 340 | UNUSED_VARIABLE(t7); | ^~~~~~~~~~~~~~~ ninja: build stopped: subcommand failed.
Attachments
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2024-02-05 06:48:24 PST
This is almost certainly this cherry-pick:
https://github.com/WebKit/WebKit/commit/c1f8a9e819201b59cacc047715b30dd2b4a1df30
t6 and t7 are not defined in the 2.42 branch.
Michael Catanzaro
Comment 2
2024-02-05 09:11:01 PST
Fixed on 2.42 branch
Adrian Perez
Comment 3
2024-02-05 15:28:56 PST
Thanks Michael!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug