[GTK] [2.42.5] LowLevelInterpreter.cpp:339:21: error: ‘t6’ was not declared in this scope https://bugs.webkit.org/show_bug.cgi?id=268739

Unreviewed build fix. Seems a backport went badly, and we didn't notice
because the code is architecture-specific.

* Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:
(JSC::CLoop::execute):